--- a/KPI.html
+++ b/KPI.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Dashboard Integrado</title>
+  <link rel="icon" type="image/png" href="img/Imagem1.png">
   <style>
     html, body {
       margin: 0;
